Previous fix for overflow issues wasn't working and breaking things. So alternative applied

--- a/styles.css
+++ b/styles.css
@@ -166,18 +166,22 @@
 	font-family: system-ui, -apple-system, "Helvetica", sans-serif;
 }
 
+html {
+	height: 100%;
+	width: 100%;
+}
+
+
 body {
 	background: linear-gradient(-45deg, #02011e, #002478);
-	height: 100vh;
-	overflow: hidden;
+	
 }
 
 h1 {
 	color: #0060dd;
 	font-weight: 700;
 	font-family: "Monserrat", Helvetica, Verdana, sans-serif;
-	margin: 1.05rem;
-	margin-bottom: 1.5rem;
+	margin: var(--m-space);
 	text-align: center;
 }
 
